test/tests/stages/8_loops/invalid_semantics/extra_credit/duplicate_case_in_nested_statement.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: a
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CSwitch: 
                TIdentifier: (null)
                Bool: 0
                CVar: 
                  TIdentifier: a
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CCase: 
                          TIdentifier: (null)
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                          CCompound: 
                            CB: 
                              List[1]: 
                                CS: 
                                  CIf: 
                                    CConstant: 
                                      CConstInt: 
                                        TInt: 1
                                      None: 
                                    CCompound: 
                                      CB: 
                                        List[1]: 
                                          CS: 
                                            CCase: 
                                              TIdentifier: (null)
                                              CConstant: 
                                                CConstInt: 
                                                  TInt: 1
                                                None: 
                                              CReturn: 
                                                CConstant: 
                                                  CConstInt: 
                                                    TInt: 0
                                                  None: 
                                    None: 
                List[0]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
